# intronlp-2024

./: .copier-config.yaml  .copier-docker-config.yaml  .copierignore  .envrc  .tasks.toml  CHANGELOG.md  CNAME  CONTRIBUTING.md  Makefile  README.md  index.html  pyproject.toml
.docker/: Dockerfile.base  docker-compose.base.yaml  docker.base.env  docker.common.env  docker.version
.docker/.docker-scripts/: docker-compose.sh
.docker/.ids/: base.env
.docker/scripts/: entrypoint.sh  launch.sh
.github/workflows/: deploy-base-image.yaml  deploy-docs.yaml  release.yaml
book/: _config.env
book/_addons/: giscus.html  google_fonts.html  language_redirect.html  language_selector.html  language_switcher.js
book/_scripts/: build.sh  postprocessing.sh  preprocessing.sh  publish.sh
book/en/: _config.yml  _toc.yml  index.md
book/en/about/: index.md
book/en/nobel-chemistry/: index.md  session1.md  session2.md  session3.md
book/en/nobel-physics/: index.md  session1.md  session2.md  session3.md
book/en/projects/: index.md  proposal.md
book/en/syllabus/: index.md
book/en/week01/: index.md  session1.md  session2.md  wk1-lab1.ipynb
book/en/week02/: index.md  session1.md  session2.md  (+1 more)
book/ko/: _config.yml  _toc.yml  index.md
docs/: index.html
en/: genindex.html  index.html  objects.inv  search.html  searchindex.js
en/_sources/: index.md
en/_static/: language_switcher.js
en/about/: index.html
en/nobel-chemistry/: index.html  session1.html  session2.html  session3.html
en/nobel-physics/: index.html  session1.html  session2.html  session3.html
en/projects/: index.html  proposal.html  research-note.html
en/syllabus/: index.html
en/week01/: index.html  session1.html  session2.html  wk1-lab1.html
en/week02/: index.html  session1.html  session2.html  session3.html
en/week03/: index.html  session1.html  session2.html
en/week04/: index.html  session1.html  session2.html
en/week05/: index.html  session1.html  session2.html  session3.html
en/week06/: index.html  session1.html  session2.html  session3.html
en/week09/: index.html  session1.html  session2.html
en/week10/: index.html  session1.html  session2.html  session3.html
en/week11/: index.html  session1.html  session2.html  session3.html
en/week12/: index.html  session1.html  session2.html  session3.html
ko/: genindex.html  index.html  objects.inv  search.html  searchindex.js
ko/_sources/: index.md
ko/_static/: chat.js  language_selector.css
ko/about/: index.html
ko/nobel-chemistry/: index.html  session1.html  session2.html  session3.html
ko/nobel-physics/: index.html  session1.html  session2.html  session3.html
ko/projects/: index.html  proposal.html  research-note.html  teams.html
ko/syllabus/: index.html
ko/week01/: index.html  session1.html  session2.html  wk1-lab1.html
ko/week02/: index.html  session1.html  session2.html  session3.html
ko/week03/: index.html  session1.html  session2.html
ko/week04/: index.html  session1.html  session2.html
ko/week05/: index.html  session1.html  session2.html  session3.html
ko/week06/: index.html  session1.html  session2.html
ko/week09/: index.html  session1.html  session2.html
ko/week10/: index.html  session1.html  session2.html  session3.html
ko/week11/: index.html  session1.html  session2.html  session3.html
src/coursetempi/: __cli__.py  __init__.py
src/nlp2024/: __cli__.py  __init__.py
tests/coursetempi/: test_cli.py  test_init.py
tests/nlp2024/: test_cli.py  test_init.py
(+244 files in other folders)
