[tool.poetry]
name = "intronlp-2024"
version = "0.5.0"
description = "Introduction to the fundamental concepts of Natural Language Processing (NLP) and advanced language model technologies."
authors = ["Young Joon Lee <entelecheia@hotmail.com>"]
license = "CC-BY-4.0"
homepage = "https://nlp2024.jeju.ai"
repository = "https://github.com/entelecheia/intronlp-2024"
readme = "README.md"
packages = [{ include = "nlp2024", from = "src" }]

[tool.poetry.scripts]
nlp2024 = 'nlp2024.__cli__:main'

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
click = "^8.1.3"
pyyaml = "^6.0.2"
nltk = ">=3.9.0,<=3.9.2"
gensim = ">=4.3.0,<=4.3.3"
matplotlib = ">=3.9.0,<=3.9.2"
scikit-learn = ">=1.3.2,<=1.5.2"
numpy = ">=1.26.4,<=2.0.0"
huggingface-hub = ">=0.20.2,<=0.26.1"
openai = ">=1.44.0,<=1.52.0"
ekonlpy = "^2.0.5"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
python-semantic-release = "^7.33.1"
isort = "^5.12.0"
black = ">=23.0.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"
flake8-pyproject = "^1.2.2"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"

[tool.poe]
include = [".tasks.toml", ".tasks-extra.toml"]

[tool.black]
# 'extend-exclude' excludes files or directories in addition to the defaults
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
(
  _version.py
  | .refs
  | .copier-template
  | tests
  | docs
  | book
  | _build
  | node_modules
)
'''

[tool.isort]
profile = "black"
skip = ['_version.py', 'node_modules', '_build', 'docs', 'tests', 'venv', '.copier-template', '.refs']

[tool.flake8]
ignore = ['F401', 'E501', 'W503']
exclude = ["node_modules", "_build", "docs", "tests", "venv", ".copier-template", ".refs"]
per-file-ignores = ['__init__.py:F401', '_version.py:W292']

[tool.mypy]
namespace_packages = true
exclude = ["node_modules", "build", "_build", "dist", "docs", "tests", "venv", ".copier-template", ".refs"]
# 3rd party import
ignore_missing_imports = true
# dynamic typing
disallow_any_unimported = true
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = true
disallow_any_generics = false
disallow_subclassing_any = true
# platform
python_version = "3.8"
# untyped
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
# None and Optional
no_implicit_optional = true
# Warnings
warn_return_any = false
warn_unreachable = true
# Misc
pretty = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider" # deactivating pytest caching.

[tool.coverage.report]
exclude_lines = ['if __name__ == "__main__":']

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"

[tool.semantic_release]
branch = "main"
version_toml = "pyproject.toml:tool.poetry.version"
version_variable = "src/nlp2024/_version.py:__version__"
version_source = "tag"
commit_version_number = true # required for version_source = "tag"
commit_subject = "chore(release): :rocket: {version} [skip ci]"
prerelease_tag = "rc"
major_on_zero = true
tag_commit = true
changelog_file = "CHANGELOG.md"
upload_to_repository = true
upload_to_release = true
hvcs = "github" # hosting version control system, gitlab is also supported
build_command = "poetry build --no-cache"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

